--- a/src/components/MyFirstComponents.scss
+++ b/src/components/MyFirstComponents.scss
@@ -1,3 +1,6 @@
+body{
+    background-color: rgb(255, 255, 255);
+}
 .card-content {
     margin-top: 70px;
     display: flex;
@@ -7,11 +10,28 @@
 
 .card-style {
     padding-bottom: 10px;
-    margin-bottom: 10px;
-    width: 40%;
-    margin-right: 20px;
-    background-color: rgba(237, 235, 238, 0.495);
+    margin-bottom: 30px;
+    width: 10%;
+    margin-right: 30px;
+    background-color: rgba(143, 152, 255, 0.147);
     .ant-card-head{
-        background-color: rgba(223, 217, 228, 0.553);
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        background-color: rgba(36, 0, 238, 0.106);
+        text-align: center;
+        font-weight: bold;
+        border-radius: 5px;
+        font-size: 16px;
     }
+}
+
+.ul-style {
+    list-style: none;
+}
+
+.img-style {
+    height: 150px;
+}
+
+p{
+    font-weight: bold;
 }
